[tool.poetry]
name = "rds-encryption"
version = "0.1.0"
description = ""
authors = ["iYasha <33287747+iYasha@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.10"
boto3 = "^1.37.23"
boto3-stubs = {extras = ["dms", "rds"], version = "^1.37.23"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
